--- a/Coffee Machine/Enough coffee for everyone/task-info.yaml
+++ b/Coffee Machine/Enough coffee for everyone/task-info.yaml
@@ -187,5 +187,5 @@ files:
     }
   learner_created: true
 feedback_link: https://hyperskill.org/projects/33/stages/177/implement
-status: Failed
+status: Solved
 record: 3
